--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -18,7 +18,7 @@ To conclude, section \ref{sec:arch-summary} will give a summary of what has been
 \label{sec:risc-v}
 
 The core idea of the RISC-V architecture has already been introduced in section \ref{sec:bg-riscv}.
-The base integer instruction set comprises instruction of four categories: integer and bit-vector arithmetic, memory operations, control transfer, and platform management.
+The base integer instruction set comprises instruction of four categories: integer and bit vector arithmetic, memory operations, control transfer, and platform management.
 The instructions that are available to the RISC-V architecture specifically, will be introduced in section \ref{sec:rv-base-int-isa} subsequently.
 
 Afterwards, the privileged architecture of RISC-V will be introduced which can be divided into three parts:
