--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -16,11 +16,11 @@ Taken together with aforementioned assumptions these patches mark a fixpoint of 
 This section is grouped as follows: section \ref{sec:assumptions} will introduce aforementioned assumptions and \smv{INIT} constraints.
 
 \todo{Wurden arch.-ref. eingeführt?}
-Since only assumptions and no architectural refinements were introduced to the model, it was also tested how the results would change when deliberate breaking points are introduced to the architecture.
-These breaking points mimic known vulnerabilities to real-world architectures and will therefore also give an overview of the capabilities of the verification approach of this thesis.
+Since only assumptions and no architectural refinements were introduced to the model, it was also tested how the results would change when canaries are introduced to the architecture.
+The term \enquote{canary} refers to the birds used in coal mines to indicate a loss of oxygen.
+In the field of software development, this term refers to bugs that are added to code bases deliberately in order to test detection mechanisms.
+These canaries mimic known vulnerabilities to real-world architectures and will therefore also give an overview of the capabilities of the verification approach of this thesis.
 The results of these tests will finally be presented in section \ref{sec:canaries}.
-
-\todo{Motivation also was to test, whether these assumptions are too strong/model can actually capture weakpoints}
 
 \subsection{Assumptions}
 
