--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -605,7 +605,7 @@ The system can make a transition if it satisfies all formulas given as constrain
 Therefore - if full control over the transition relation is desired - it often is not sufficient to simply constrain transitions by a group of implications\footnote{%
     The exception to this are groups of implications where the antecedents form a total case differentiation, i.e. where one antecedent is always true.
 }.
-In the implementation in SMV of the MINRV8 architecture, \smv{case}-expressions that always close with a default statement were used to ensure that transitions of variables are always fully constrained.
+In the implementation for nuXmv of the MINRV8 architecture, \smv{case}-expressions that always close with a default statement were used to ensure that transitions of variables are always fully constrained.
 
 In the following, the \enquote{formal idea} of the variable transitions of the model will be introduced.
 In this context, it is assumed that variables are stable unless otherwise mentioned.
