--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -76,6 +76,7 @@
 \newacronym{bdd}{BDD}{boolean decision diagram}
 \newacronym{psl}{PSL}{property specification language}
 \newacronym{mmu}{MMU}{memory management unit}
+\newacronym{ifc}{IFC}{information flow control}
 
 \newacronym{ecall}{ECALL}{environment call}
 \newacronym{ebreak}{EBREAK}{environment breakpoint}
