--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -405,8 +405,6 @@ RISC-V's architectural specification is divided into two volumes: volume specifi
 The privileged architecture is not divided into modules but rather \textit{functional groups} that define certain aspects of privileged computing.
 Such groups include for example machine- and supervisor-level \glspl{isa} and the description of a platform level interrupt controller.
 
-\todo{Add motivation/goals of RISC-V}
-
 This thesis works with version 2.2 of volume 1 \cite{RiscVISA} and version 1.1 of volume 2 \cite{RiscVISAP}.
 RISC-V understands itself as a highly customizable architecture.
 Currently, there are four variants of a base integer instruction set - one of which must be implemented by any RISC-V processor - and 13 optional extensions.
@@ -781,9 +779,8 @@ However, in some situations it might be perfectly fine for some of the processes
 Labeling parts of code as end-state contributes towards this.
 
 Never claims are processes themselves.
-\todo{Forward reference to introduction of LTL}
 They run like any other process but must not terminate otherwise they're regarded as failure.
-This is the most complex way to express properties and in fact falls together with writing \gls{ltl} properties about a model.
+This is the most complex way to express properties and in fact falls together with writing \gls{ltl} properties about a model which will be introduced in section \ref{sec:nuxmv}.
 Therefore SPIN also allows to express such never properties in \gls{ltl} directly via their command line interface.
 
 The last type of properties, trace assertions, solely deal with message passing and therefore are not relevant to this thesis.
@@ -982,11 +979,11 @@ For SPACER or \muZ{} to be usable in the context of this thesis, these tools wou
 \subsubsection{nuXmv}
 \label{sec:nuxmv}
 
-nuXmv \cite{Cavada14} is a symbolic model checker that accepts the SMV input language and is able to model check invariants, \gls{ltl} and \gls{ctl} formulas.
+nuXmv \cite{Cavada14} is a symbolic model checker that is able to model check invariants, \gls{ltl} and \gls{ctl} formulas.
 Symbolic model checkers have been introduced in \cite{Burch92} and encode the state-space of the system to model check in \glspl{bdd} which work analogously to binary decision trees with the major difference that \glspl{bdd} are not trees but directed, acyclic graphs.
 
 nuXmv supports both finite and infinite state transition systems.
-These systems are expressed in the form of \textit{modules} in the SMV input language.
+These systems are expressed in the form of \textit{modules}.
 At its heart, a module consists of a collection of variables, \smv{INIT} (i.e. initial) constraints and \smv{TRANS} (i.e. transition) constraints.
 There are more syntactical constructs, e.g. macros or constants, but these do not add to the expressiveness of nuXmv but either serve as syntactic sugar or enhance on performance if used.
 A module in nuXmv induces a set of state transition systems.
@@ -994,7 +991,7 @@ The state space of such a system is given by the variables of the module, i.e. a
 The initial state must model the \smv{INIT} constraints the transition relation must model the \smv{TRANS} constraints.
 Whenever nuXmv checks a property $ P $ for a module $ M $ it is checked if every state transition system $ S $ which is given by $ M $ models $ P $.
 
-SMV is a strongly typed language.
+The input language to nuXmv is strongly typed.
 Variables can be of type boolean, integer range, a custom enumeration, bit vector or array in the case of finite state transition systems or additionally integers and reals which induce infinite state transition systems.
 \smv{INIT} constraints are simple formulas of propositional logic supporting standard expression to deal with bit vectors, arrays, etc., such as basic arithmetic, array indexing, standard boolean operators on both bit vector and boolean level, but also case and if-then-else expressions.
 \smv{TRANS} constraints also are forumlas of propositional logic but additionally support use of the \smv{next(...)} operator which is a reference to the value of the respective expression in the next state.
@@ -1005,7 +1002,7 @@ Variables can be of type boolean, integer range, a custom enumeration, bit vecto
     \begin{figure}
         \begin{lstlisting}[
             language=smv,
-            caption={An example of the SMV input language},
+            caption={An example of a nuXmv module},
             label={snpt:nuxmv}
         ]
             MODULE main
@@ -1147,7 +1144,7 @@ It can be seen that the most important \gls{ltl} operators \smv{X}, \smv{G} and 
     \begin{figure}
         \begin{lstlisting}[
             language=smv,
-            caption={An example of the SMV specification language},
+            caption={An example of a specification in nuXmv},
             label={snpt:nuxmv-spec}
         ]
             INVARSPEC traffic_lights != ped_lights;
@@ -1208,10 +1205,9 @@ The idea for the implementation is straight-forward:
     \item Use transition constraints to implement the behavior of each instruction
 \end{itemize}
 
-For reasons that at this point can not be discussed meaningfully but will become clear in section \ref{sec:checking}, it was furthermore decided to express the information flow control of the architecture in \gls{ltl}.
+It was furthermore decided to express the information flow control of the architecture in \gls{ltl}.
 nuXmv supports a plethora of techniques to check specifications, e.g. the \citetitle{nuXmv} \cite{nuXmv} lists 47 commands to check a specification.
-\todo{gls ifc}
-In the practical work for this thesis, after the decision to implement the information flow control in \gls{ltl} has been made, a couple of these techniques which apply to \gls{ltl}-checking were tested out.
+In the practical work for this thesis, after the decision to implement the \gls{ifc} in \gls{ltl} has been made, a couple of these techniques which apply to \gls{ltl}-checking were tested out.
 In this informal evaluation it was found that the K-Liveness algorithm proposed in \cite{Claessen12} delivered best results and terminated quickly whenever the model met the specification.
 Whenever this was not the case, i.e. the specification was not met by the model which was usually indicated by a long runtime of the K-Liveness algorithm, a \gls{bmc} approach computed counter-examples very efficiently.
 As the technique of \gls{bmc} has already been introduced in section \ref{sec:spacer}, now, the key idea behind the K-Liveness algorithm by \citeauthor{Claessen12} shall be investigated.
