thesis: Add reference to machine-readable spec of RISC-V

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -602,3 +602,10 @@
     url = {http://pyexpander.sourceforge.net/},
     urldate = {2019-12-18},
 }
+
+@Online{RiscvSpecFormal,
+    title = {Formal Specification of RISC-V ISA in Kami},
+    organization = {SiFive},
+    url = {https://github.com/sifive/RiscvSpecFormal},
+    urldate = {2020-01-08},
+}
