--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -79,8 +79,9 @@ Finally, we give an outlook on future work:
     This was discussed extensively in section \ref{sec:discuss-arch}.
     \item[MMU] In light of \cite{KhakpourSD13} a model of an \gls{mmu} could be implemented to make use of information flow tracking on user-mode level.
     This was discussed in section \ref{sec:related-work}.
-    \item[Machine-generated model] \todo{references to formal models of risc-v} The model of the architecture that was implemented by hand in this thesis could be generated from existing machine-readable architectural specifications.
+    \item[Machine-generated model] The model of the architecture that was implemented by hand in this thesis could be generated from existing machine-readable architectural specifications.
     For example, there are machine-readable versions of the ARM architecture; both \cite{Reid17,Fox02} either used or developed machine-readable specifications that might be used for this endeavor.
+    For RISC-V, there also is a formal specification available \cite{RiscvSpecFormal}.
     Not implementing the model by hand would \begin{enumerate*}[label=\alph*)]
         \item possibly enhance the trust in the model itself, depending on the trust in the source and the translation procedure, and
         \item make the approach even more viable and stable towards architectural changes.
