--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -57,10 +57,7 @@ At the end of this section, the methodology of this thesis will be discussed in 
 In section \ref{sec:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be introduced.
 Following up on this, it will be described how the MINRV8 architecture was implemented in nuXmv.
 
-Section \ref{sec:ifc} details what an information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa}.
-
-Section \ref{sec:checking} then defines the higher level properties that implement information flow control for the MINRV8 architecture.
-Furthermore it will be discussed, how nuXmv was used to verify these properties.
+Section \ref{sec:ifc} details what an information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher level properties that implement information flow control for the MINRV8 architecture.
 
 The evaluation of our approach is given in section \ref{sec:results}-\ref{sec:conclusion}.
 First, the results of the verification process will be presented in section \ref{sec:results}.
