thesis: Improve introduction

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -1241,8 +1241,9 @@ If a trace is found where such a state appears at least twice, there also is a t
 \subsection{Summary \& Methodology}
 \label{sec:sum-background}
 
-The goal of this thesis is to verify a simplified version of the RISC-V \gls{isa}, MINRV8, via higher level information flow control properties.
+The goal of this thesis is to evaluate an approach to formally verifying \glspl{isa} against higher-level information flow properties using a model checker.
 This combines the work of \citeauthor{Reid17} \cite{Reid17} and \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
+This approach will be evaluated by applying it to a simplified version of the RISC-V \gls{isa}, MINRV8.
 We adopt the requirements to these properties from \cite{Reid17}, i.e. these properties should:
 \begin{displaycquote}[pp.88:2-3]{Reid17}
     \begin{itemize}
