--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -18,7 +18,19 @@ Whereas testing is a quick and efficient way of finding bugs in the development 
 
 In \citetitle{Reid17} \cite{Reid17}, \citeauthor{Reid17} stressed the need of verifying specifications themselves as opposed to simply verifying implementations against specifications.
 To tackle this, he proposed to verify specifications against higher level properties and used this methodology to verify the specification of the ARM M-Class specification.
-In this thesis, two lines of his research will be continued: \begin{enumerate*}[label=\alph*)]
+
+An intuition for this line of research is given by \citeauthor{Reid17} with the following analogy: think of a specification as the law and an implementation as some action that is touched by the law.
+In our everyday life, we rely on everybody to obey the law in their actions.
+If we want to find out whether some action is just (correct), it is checked whether it violates the law.
+The same is done for implementations.
+If we want to check whether some implementation is correct (just), is is checked whether it complies with the respective specification.
+However, every law has loopholes.
+Sometimes what \textit{we want} from the law does not align with what it actually says.
+This is because the law is big and complex and some cases get overlooked.
+Therefore, there not only is the law but also the constitution that expresses the very basis of what must be always guaranteed by each and every statute of the law.
+To carry this analogy on, in the world of formal verification, the constitution is given by the higher level properties the specification itself is verified against.
+
+In this thesis, two lines of \citeauthor{Reid17}'s research will be continued: \begin{enumerate*}[label=\alph*)]
     \item the main contribution of this thesis also is to propose an approach for verifying specifications against higher level properties and
     \item this methodology will be applied to an \gls{isa} specification as well.
 \end{enumerate*}
@@ -26,24 +38,25 @@ In this thesis, two lines of his research will be continued: \begin{enumerate*}[
 The higher level properties an \gls{isa} will be verified against, mainly stem from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
 As the title indicates, their work also falls into the domain of verification; the authors propose a new way of verifying \gls{hdl} implementations.
 The core idea here is to use a a type system in which types serve as security annotation of information.
-By applying typing rules to expressions in the \gls{hdl} code, these annotations are forwarded and thus information is tracked through the code.
+By applying typing rules to expressions in the \gls{hdl} code, these annotations are propagated and thus information is tracked through the code.
 Certain type conversions are, however, prohibited and mark a security vulnerability.
 Thus, their approach can be summarized as tracking and controlling information flow in \gls{hdl} code.
-The authors evaluate their approach by applying it to the implementation of the ARM TrustZone extension.
-In this thesis, the idea of tracking and controlling information flow as proposed in \cite{Ferraiuolo17} will be lifted to the level of the \gls{isa} specification thus following the line of research as proposed in \cite{Reid17}.
 
-We claim that this approach is
+In this thesis, the idea of tracking and controlling information flow as proposed in \cite{Ferraiuolo17} will be lifted to the level of the \gls{isa} by annotating the registers of the architecture with information flow labels that are propagated by instructions.
+The information flow control that in \cite{Ferraiuolo17} was given by a type system will be implemented using high-level properties expressed in \gls{ltl} that constrain information flow very generally; thus following the line of research of \cite{Reid17}.
+
+We claim that approach that will be developed in the course of this thesis is
 \begin{itemize}
     \item viable, i.e. the hardware requirements are low and the work can be reproduced with limited time investment,
     \item relevant, i.e. the approach successfully uncovers issues in architectures, and
     \item supplemental, i.e. it enhances on related work such as \cite{Reid17}.
 \end{itemize}
 
-This new approach will be applied to the RISC-V architecture using the model checker nuXmv.
+As a proof of concept, this approach will be applied to the RISC-V architecture using the model checker nuXmv.
 RISC-V is a young and open-source \gls{isa} that has first been published in 2011 \cite{RiscVISA-org}.
 A basic architecture inspired by the RISC-V architecture will be modelled in nuXmv.
 nuXmv is a general purpose model checker that supports different specification languages and verification algorithms.
-Using nuXmv allows for enhancing on the approach proposed by \citeauthor{Reid17} in a key aspect:
+Additionally, using nuXmv allows for enhancing on the approach proposed by \citeauthor{Reid17} in a key aspect:
 In his work, \citeauthor{Reid17} focused on higher lever properties to verify the ARM \gls{isa} against that were limited to making specifications about a single transition of the processor only, i.e. that only take the pre- and post-state of a single cycle of the processor into account.
 nuXmv on the other hand allows to consider infinite sequences of instructions, i.e. sequences of processor-transitions, of unbounded length.
 
